--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,111 +2,151 @@
   padding: 0 2rem;
 }
 
+.header {
+  padding: 20px 0;
+}
+.logo {
+  max-width: 150px;
+  width: 100%;
+  min-height: 78px;
+}
+
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  max-width: 1052px;
+  width: 100%;
+  margin: 2rem auto;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
+}
+.title {
+  color: #8FEDDC;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: normal;
+  max-width: 452px;
+  width: 100%;
+}
+.description {
+  color: #FFFFFF;
+  font-size: 24px;
+  line-height: 40px;
+  font-weight: normal;
+  max-width: 585px;
+  width: 100%;
+}
+.button {
+  background: #FFFFFF;
+  color: #004368;
+  border: 1px solid #FFFFFF;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 11px 22px;
+  transition: all 0.2s linear;
+}
+.button:hover {
+  color: #FFFFFF;
+  background: #004368;
+}
+.buttoncontent {
+  display: flex;
+  justify-content: center;
   align-items: center;
+}
+.buttonicon {
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+}
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 50px;
+}
+.card {
+  padding: 30px 35px;
+  background-color: #FFFFFF;
+  border-radius: 15px;
+  max-width: 328px;
+  min-height: 350px;
+}
+.cardfirst {
+  border-top: 17px solid #BEE8FF;
+}
+.cardsecond {
+  border-top: 17px solid #8FEDDC;
+}
+.cardthird {
+  border-top: 17px solid #FFD488;
+}
+.cardsubtitle {
+  color: #656565;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  margin-bottom: 7px;
+}
+.cardtitle {
+  color: #004368;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 30px;
+  margin-bottom: 23px;
+}
+.cardseparator {
+  width: 50%;
+  color: #C2C2C2;
+  margin: 0 0 13px;
+}
+.cardtext {
+  color: #656565;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.cardbutton {
+  text-align: center;
+  margin: 30px auto 0px;
+}
+.cardbutton a {
+  color: #FFFFFF;
+  background: #004368;
+  border: 1px solid #004368;
+  border-radius: 11px;
+  padding: 10px 16px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  transition: all 0.2s linear;
+}
+.cardbutton a:hover {
+  color: #004368;
+  background: #FFFFFF;
 }
 
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  padding: 1rem 0;
   justify-content: center;
   align-items: center;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.footer p {
+  color: #014469;
+  font-size: 16px;
+  line-height: 40px;
+  font-weight: 500;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
 
 @media (max-width: 600px) {
   .grid {
