--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
   /*background: linear-gradient(89.65deg, #004368 24.05%, rgba(0, 67, 104, 0) 82.28%);*/
   /*background-color: #004368;*/
   background-color: #8FEDDC;
-  background-image: url('/images/background.png');
+  background-image: url('/bannano-prelaunch/images/background.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
