--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,8 +27,8 @@
 }
 .title {
   color: #8FEDDC;
-  font-size: 48px;
-  line-height: 60px;
+  font-size: 3rem;
+  line-height: 3.75rem;
   font-weight: normal;
   max-width: 452px;
   width: 100%;
@@ -36,8 +36,8 @@
 }
 .description {
   color: #FFFFFF;
-  font-size: 24px;
-  line-height: 40px;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
   font-weight: normal;
   max-width: 585px;
   width: 100%;
@@ -47,9 +47,9 @@
   color: #004368;
   border: 1px solid #FFFFFF;
   border-radius: 10px;
-  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   font-weight: 600;
-  line-height: 20px;
   padding: 11px 22px;
   transition: all 0.2s linear;
 }
@@ -76,7 +76,7 @@
   margin-top: 50px;
 }
 .card {
-  padding: 30px 35px;
+  padding: 20px 35px;
   background-color: #FFFFFF;
   border-radius: 15px;
   max-width: 328px;
@@ -93,16 +93,16 @@
 }
 .cardsubtitle {
   color: #656565;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 500;
-  line-height: 22px;
+  line-height: 1.375rem;
   margin-bottom: 7px;
 }
 .cardtitle {
   color: #004368;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   margin-bottom: 23px;
 }
 .cardseparator {
@@ -112,9 +112,9 @@
 }
 .cardtext {
   color: #656565;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 1.25rem;
   margin-bottom: 10px;
 }
 .cardbutton {
@@ -127,8 +127,8 @@
   border: 1px solid #004368;
   border-radius: 11px;
   padding: 10px 16px;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   font-weight: 600;
   transition: all 0.2s linear;
 }
@@ -146,28 +146,33 @@
 }
 .footer p {
   color: #014469;
-  font-size: 16px;
-  line-height: 40px;
+  font-size: 1rem;
+  line-height: 2.5rem;
   font-weight: 500;
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 1020px) {
+  .container {
+    padding: 0 2rem;
+  }
   .grid {
     width: 100%;
-    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
+@media (max-width: 700px) {
+  .footer p {
+    color: #FFFFFF;
+    text-align: center;
+    line-height: 1.5rem;
   }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
+}
+
+@media (max-width: 480px) {
+  .logo {
+    margin: 0 auto;
   }
 }
