--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,9 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Quicksand', sans-serif;
-  /*background: linear-gradient(89.65deg, #004368 24.05%, rgba(0, 67, 104, 0) 82.28%);*/
-  /*background-color: #004368;*/
+  font-size: 16px;
   background-color: #8FEDDC;
+  /*background-image: url('/images/background.png');*/
   background-image: url('/bannano-prelaunch/images/background.png');
   background-repeat: no-repeat;
   background-size: 100%;
@@ -21,12 +21,11 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@media (max-width: 700px) {
+  html,
   body {
-    color: white;
-    background: black;
-  }
+    font-size: 14px;
+    background-image: none;
+    background-color: #004368;
+  }  
 }
